[package]
name = "iqps-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.7"
clap = { version = "4.5.19", features = ["derive", "env"] }
diesel = { version = "2.2.4", features = ["postgres"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
